--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://esinshadrachrafe:9WufGbrwXRp7jlxJ@bridging-365.ynmno5k.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://stagnator:$Aurabh2695@cluster0.ubbktvx.mongodb.net/?retryWrites=true&w=majority
